# pyton

./: .gitignore  README.md  pyproject.toml
labs/lab01/: README.md  README.txt  chronicles_of_narnia.txt  histo.py
labs/lab02/: main.py
labs/lab03/: PN.py  README.md  out.json
labs/lab04/: README.md  chopin.py  out.json
labs/lab05/: GM_analyze_app.py  KIE_bieg_wlasny.txt
labs/lab06/: decor.py  isinga.py  main.py
labs/lab08/: isinga_numba.py  main.py
labs/lab09/: wdprir.py
labs/lab10/: wdprir_fetch.py  wdprir_fetch_async.py
labs/lab11/: TDSG_024_2021_60min_nospec.csv  tdsg_miesiecznie.ipynb
labs/lab12/: CA-GrQc_100.txt  grafan.out  grafan.py
tests/: test_pyton.py
