[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["Rafał Dąbrowski <73179688+rafal-dab@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ascii_graph = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
