[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["Rafał Dąbrowski <73179688+rafal-dab@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ascii_graph = "^1.5.1"
rich = "^10.13.0"
requests = "^2.26.0"
bs4 = "^0.0.1"
selenium = "^4.0.0"
Pillow = "^8.4.0"
numba = "^0.54.1"
bokeh = "^2.4.2"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
jupyterlab = "^3.2.8"
pandas = "^1.4.0"
networkx = "^2.6.3"
scipy = "^1.7.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
